--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cli"
   ],
   "author": "James Turnbull <james@ltl.so>",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/jamesturnbull/gharchive.git"
