--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "commander": "^14.0.0",
     "dotenv": "^16.5.0",
