--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@jamtur01/gharchive",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A CLI tool to archive GitHub repositories",
   "main": "dist/index.js",
   "bin": {
-    "gharchive": "./dist/index.js"
+    "gharchive": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -23,7 +23,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jamtur01/gharchive.git"
+    "url": "git+https://github.com/jamtur01/gharchive.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
