--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,9 +2,9 @@ name: Node.js Package
 
 on:
   push:
-    branches: [ main ]
-  release:
-    types: [ created ]
+    branches: [main]
+    tags:
+      - "v*" # Push events to tags matching v*, e.g., v1.0, v1.1.0
 
 jobs:
   build:
@@ -14,10 +14,25 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
       - run: npm ci
       - run: npm run build
       - run: npm test
+
+  create-release:
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
+          draft: false
+          prerelease: false
 
   publish-gpr:
     needs: build
