--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
-    "test": "echo \"No tests yet\" && exit 0",
+    "test": "jest",
     "prepublishOnly": "npm run build",
     "lint": "echo \"No linting configured\""
   },
@@ -39,7 +39,10 @@
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.8",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.15.22",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.8.3"
   }
 }
